# Secondary-Research-Workflow_V1

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  research_results.json
1/: conftest.py
1/test_workflows/: test_research_workflow.py
config/: settings.py
data/sample_requests/: ai_tools_research.json
data/templates/: research_plan_template.json
docs/: setup.md
scripts/: run-local.sh  setup.sh  start_research.py
src/: main.py
src/agents/: base_agent.py  dummy_agent.py  orchestration_agent.py  report_generation_agent.py  research_plan_agent.py  root_orchestrator.py  swot_analysis_agent.py  synthesis_agent.py
src/callbacks/: monitoring_callbacks.py  safety_callbacks.py
src/prompts/: orchestration_agent_instruction.txt  report_generation_agent_instruction.txt  research_plan_instruction.txt  root_orchestrator_instruction.txt  swot_analysis_instruction.txt  synthesis_agent_instruction.txt
src/tools/: anthropic_research_client.py  claude_client.py  google_sheets_client.py  notion_client.py  perplexity_client.py  research_tools.py
src/utils/: data_validation.py
src/workflows/: research_workflow.py  research_workflow_googlesdk_copy.py
