[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secondary-research-workflow"
version = "1.0.0"
description = "Multi-agent secondary research workflow using Google ADK"
authors = [
    {name = "Research Team", email = "research@company.com"}
]
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=0.4.0",
    "notion-client>=2.2.1",
    "google-api-python-client>=2.108.0",
    "pandas>=2.1.0",
    "fastapi>=0.104.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true